src/main/scala/io/github/edadma/iup/extern/LibIUP.scala


  /************************************************************************/
  /*                      Utilities                                       */
  /************************************************************************/
  def IupStringCompare(str1: /*const*/ CString, str2: /*const*/ CString, casesensitive: CInt, lexicographic: CInt): CInt =
    extern //288
  def IupSaveImageAsText(ih: Ptr[Ihandle],
                         filename: /*const*/ CString,
                         format: /*const*/ CString,
                         name: /*const*/ CString): CInt                                            = extern //291
  def IupImageGetHandle(name: /*const*/ CString): Ptr[Ihandle]                                     = extern //292
  def IupTextConvertLinColToPos(ih: Ptr[Ihandle], lin: CInt, col: CInt, pos: Ptr[CInt]): Unit      = extern //295
  def IupTextConvertPosToLinCol(ih: Ptr[Ihandle], pos: CInt, lin: Ptr[CInt], col: Ptr[CInt]): Unit = extern //296
  def IupConvertXYToPos(ih: Ptr[Ihandle], x: CInt, y: CInt): CInt                                  = extern //299
  def IupStoreGlobal(name: /*const*/ CString, value: /*const*/ CString): Unit                      = extern //302
  def IupStoreAttribute(ih: Ptr[Ihandle], name: /*const*/ CString, value: /*const*/ CString): Unit = extern //303
  // def IupSetfAttribute(ih: Ptr[Ihandle], name: /*const*/ CString, format: /*const*/ CString): Unit = extern //304
  def IupStoreAttributeId(ih: Ptr[Ihandle], name: /*const*/ CString, id: CInt, value: /*const*/ CString): Unit = extern //305
  // def IupSetfAttributeId(ih: Ptr[Ihandle], name: /*const*/ CString, id: CInt, f: /*const*/ CString): Unit = extern //306
  def IupStoreAttributeId2(ih: Ptr[Ihandle], name: /*const*/ CString, lin: CInt, col: CInt, value: /*const*/ CString): Unit =
    extern //307
  // def IupSetfAttributeId2(ih: Ptr[Ihandle], name: /*const*/ CString, lin: CInt, col: CInt, format: /*const*/ CString): Unit = extern //308
  def IupTreeSetUserId(ih: Ptr[Ihandle], id: CInt, userid: Ptr[Unit]): CInt                                        = extern //311
  def IupTreeGetUserId(ih: Ptr[Ihandle], id: CInt): Ptr[Unit]                                                      = extern //312
  def IupTreeGetId(ih: Ptr[Ihandle], userid: Ptr[Unit]): CInt                                                      = extern //313
  def IupTreeSetAttributeHandle(ih: Ptr[Ihandle], name: /*const*/ CString, id: CInt, ih_named: Ptr[Ihandle]): Unit = extern //314

  /************************************************************************/
  /*                      Pre-defined dialogs                             */
  /************************************************************************/
  def IupFileDlg: Ptr[Ihandle]                                           = extern //321
  def IupMessageDlg: Ptr[Ihandle]                                        = extern //322
  def IupColorDlg: Ptr[Ihandle]                                          = extern //323
  def IupFontDlg: Ptr[Ihandle]                                           = extern //324
  def IupProgressDlg: Ptr[Ihandle]                                       = extern //325
  def IupGetFile(arq: CString): CInt                                     = extern //327
  def IupMessage(title: /*const*/ CString, msg: /*const*/ CString): Unit = extern //328
  // def IupMessagef(title: /*const*/ CString, format: /*const*/ CString): Unit = extern //329
  def IupMessageError(parent: Ptr[Ihandle], message: /*const*/ CString): Unit = extern //330
  def IupMessageAlarm(parent: Ptr[Ihandle],
                      title: /*const*/ CString,
                      message: /*const*/ CString,
                      buttons: /*const*/ CString): CInt = extern //331
  def IupAlarm(title: /*const*/ CString,
               msg: /*const*/ CString,
               b1: /*const*/ CString,
               b2: /*const*/ CString,
               b3: /*const*/ CString): CInt = extern //332
  // def IupScanf(format: /*const*/ CString): CInt = extern //333
  def IupListDialog(typ: CInt,
                    title: /*const*/ CString,
                    size: CInt,
                    list: Ptr[ /*const*/ CString],
                    op: CInt,
                    max_col: CInt,
                    max_lin: CInt,
                    marks: Ptr[CInt]): CInt                                                                    = extern //334
  def IupGetText(title: /*const*/ CString, text: CString, maxsize: CInt): CInt                                 = extern //336
  def IupGetColor(x: CInt, y: CInt, r: Ptr[CUnsignedChar], g: Ptr[CUnsignedChar], b: Ptr[CUnsignedChar]): CInt = extern //337
  // def IupGetParam(title: /*const*/ CString, action: Iparamcb, user_data: Ptr[Unit], format: /*const*/ CString): CInt = extern //340
//  def IupGetParamv(title: /*const*/ CString,
//                   action: Iparamcb,
//                   user_data: Ptr[Unit],
//                   format: /*const*/ CString,
//                   param_count: CInt,
//                   param_extra: CInt,
//                   param_data: Ptr[Ptr[Unit]]): CInt    = extern //341
  def IupParam(format: /*const*/ CString): Ptr[Ihandle] = extern //342
  // def IupParamBox(param: Ptr[Ihandle]): Ptr[Ihandle] = extern //343
  def IupParamBoxv(param_array: Ptr[Ptr[Ihandle]]): Ptr[Ihandle]                         = extern //344
  def IupLayoutDialog(dialog: Ptr[Ihandle]): Ptr[Ihandle]                                = extern //346
  def IupElementPropertiesDialog(parent: Ptr[Ihandle], elem: Ptr[Ihandle]): Ptr[Ihandle] = extern //347
  def IupGlobalsDialog(): Ptr[Ihandle]                                                   = extern //348
  def IupClassInfoDialog(parent: Ptr[Ihandle]): Ptr[Ihandle]                             = extern //349

}
